# mdict

./: README.md  i18next-scanner.config.cjs  package-lock.json  package.json
src/: App.tsx  AppLoader.tsx  ionicStyles.css  ionicTheme.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: action_handlers.rs  app_config.rs  config_cmd.rs  conversion_cmd.rs  error.rs  error_printer.rs  favorites.rs  favorites_cmd.rs  history.rs  history_cmd.rs  hotkey_cmd.rs  hotkey_manager.rs  lib.rs  library_cmd.rs  library_mgr.rs  main.rs  mdict_app.rs  mdx_db.rs  mdx_db_group.rs  mdx_profile.rs  mdx_url_parser.rs  request_handler.rs  search_cmd.rs  system_cmd.rs  utils.rs
src/api/: config.ts  favorites.ts  history.ts  hotkey.ts  index.ts  library.ts  search.ts  system.ts
src/components/: ColorPickerDialog.tsx  ConfirmDialog.tsx  ContentItem.tsx  ConversionProgressDialog.tsx  ConvertDBDialog.tsx  ConvertDBDialogWrapper.tsx  EntriesView.tsx  EntriesView.ui.tsx  EntryList.tsx  EntryRow.tsx  HotkeyInputDialog.tsx  ProfileListMenu.tsx  RebuildIndexDialog.tsx  RebuildIndexDialogWrapper.tsx  SearchBox.tsx  TabContainer.css  TabContainer.tsx  TextInputDialog.tsx  index.ts
src/components/EnhancedDialog/: EnhancedDialog.module.css  EnhancedDialog.tsx  index.ts  (+4 more)
src/features/: ContentView.tsx  LookupView.tsx  index.ts
src/i18n/: i18n.ts  index.ts
src/pages/: FavoritesView.tsx  HistoryView.tsx  SearchView.tsx  SettingsView.tsx  index.ts
src/store/: index.ts  useFavoritesStore.ts  useHistoryStore.ts  useLibraryStore.ts  useSearchStore.ts  useSettingsStore.ts  useSystemStore.ts
src/utils/: displayUtils.ts  mdxUrlParser.ts  platformUtils.ts  storeUtils.ts
(+21 files in other folders)
