[package]
name = "mdict-app"
version = "0.5.0"
description = "Mdict App"
authors = ["Rayman Zhang"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mdict_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.9.1", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-dialog = "2.4.2"
# global-hotkey is only needed for desktop platforms (not mobile)
global-hotkey = { version = "0.7.0", optional = true }
tauri-plugin-clipboard-manager = "2.3.2"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
# tokio = { version = "1", features = ["sync", "fs"] }
once_cell = "1.19"
url = "2.5"
fern = "0.7.1"
log = "0.4.28"
glob = "^0.3.1"
regex = "1.12.2"
walkdir = "2.5"
#mdx = { path = "/Volumes/ExtMacOS/Users/rayman/source/mdictx/mdx" }
mdx = { path = "../../mdictx/mdx", features = ["icu"] }
percent-encoding = "^2.3.0"
encoding_rs = "0.8.35"
mime_guess = "2.0"
colored = "3.0.0"
humantime = "2.3.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
chrono = "0.4"
icu_collator = "2.1.1"
icu_locale = "2.1.1"
icu_provider = "2.1.1"

[features]
# Default feature includes global-hotkey for desktop platforms
default = ["global-hotkey"]

[profile.dev]
debug = true
